Fix z-index of mobile-checkout bar

--- a/src/sass/partials/_mobile-checkout.sass
+++ b/src/sass/partials/_mobile-checkout.sass
@@ -1,5 +1,6 @@
 .dara-mobile-checkout
 	position: fixed
+	z-index: 5
 	left: 0
 	right: 0
 	bottom: 0
